Compiler/tests/bad/set5.nx
type t = [-1 .. -5];
